# hs-cryptohash-cryptoapi

./: cryptohash-cryptoapi.cabal
Crypto/Hash/: CryptoAPI.hs
