name:          cryptohash-cryptoapi
version:       0.2
description:   Crypto-api interfaces for cryptohash
license:       BSD3
license-file:  LICENSE
copyright:     Vincent Hanquez <vincent@snarc.org>
author:        Vincent Hanquez <vincent@snarc.org>
maintainer:    Vincent Hanquez <vincent@snarc.org>
synopsis:      Crypto-api interfaces for cryptohash
category:      Cryptography
build-type:    Simple
cabal-version: >=1.8
homepage:      https://github.com/vincenthz/hs-cryptohash-cryptoapi
data-files:    README.md

library
  build-depends:
      base        >=4    && <6
    , bytestring
    , cereal      >=0.2
    , crypto-api  >=0.11
    , cryptonite  >=0.13
    , memory
    , tagged      >=0.1

  exposed-modules: Crypto.Hash.CryptoAPI

source-repository head
  type:     git
  location: https://github.com/vincenthz/hs-cryptohash-cryptoapi
